cliend add some tranform

--- a/client/public/flex.less
+++ b/client/public/flex.less
@@ -4,9 +4,6 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	display: -webkit-flex;
-	-webkit-justify-content: center;
-	-webkit-align-items: center;
 }
 
 .direc-col{
@@ -30,8 +27,7 @@
 }
 
 .main-around{
-	-webkit-align-items: space-around;
-	align-items: space-around;
+	justify-content: space-around;
 }
 
 .secon-start{
