--- a/client/top/top.less
+++ b/client/top/top.less
@@ -1,7 +1,7 @@
 @import "/public/flex.less";
 
 div, section{
-	border: 1px solid #ccc;
+	//border: 1px solid #ccc;
 	box-sizing: border-box;
 }
 
@@ -9,25 +9,73 @@ body{
 	background-color: @main-color;
 }
 
+.piclife{
+	height: 400px;
+	a{
+		display: block;
+		width: 30%;
+		height: 100%;
+		opacity: 0.8;
+
+		-moz-transition: all 0.25s linear;
+		-webkit-transition: all 0.25s linear;
+		-o-transition: all 0.25s linear;
+		transition: all 0.25s linear;
+
+		.pic{
+			height: 100%;
+			width: 100%;
+			background-position: center center;
+			background-size: auto 100%;
+			border-radius: 10px;
+			border: 1px solid white;
+		}
+		&:hover{
+			-moz-transform:scale(1.2);
+			-o-transform:scale(1.2);
+			-webkit-transform:scale(1.2);
+			transform: scale(1.2);
+			width: 40%;
+			z-index: 5;
+			opacity: 1;
+		}
+	}
+}
+
 .blog{
-	color: white;
 	max-height: 150px;
 	margin-bottom: 30px;
-	.blogtitle{
-		strong{
-			font-size: 30px;
-			display: block-inline;
-			margin-right: 40px;
+	a{
+		display: block;
+		color: white;
+		text-decoration: none;
+		.blogtitle{
+			strong{
+				font-size: 30px;
+				display: block-inline;
+				margin-right: 40px;
+			}
+			span{
+				font-size: 15px;
+				margin-right: 10px;
+				color: #ccc;
+				font-style: italic;
+			}
 		}
-		span{
-			font-size: 15px;
-			margin-right: 10px;
-			color: #ccc;
+		.blogcontent{
+			font-size: 20px;
 			font-style: italic;
 		}
+		-moz-transition: all 0.15s linear;
+		-webkit-transition: all 0.15s linear;
+		-o-transition: all 0.15s linear;
+		transition: all 0.15s linear;
+		&:hover{
+			-moz-transform: translate(20px, 0px);
+			-o-transform: translate(20px, 0px);
+			-webkit-transform: translate(20px, 0px);
+			transform:  translate(20px, 0px);
+		}
 	}
-	.blogcontent{
-		font-size: 20px;
-		font-style: italic;
-	}
+
 }
