--- a/client/public/header/header.ejs
+++ b/client/public/header/header.ejs
@@ -16,8 +16,8 @@
 
 	    <div class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Bolg</a></li>
-	        <li><a href="#">Pictures</a></li>
+	        <li><a href="/blog">Bolg</a></li>
+	        <li><a href="/piclife">Picture</a></li>
 	        <li><a href="#">Code</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
