--- a/client/public/header/header.less
+++ b/client/public/header/header.less
@@ -2,20 +2,20 @@
 
 header{
 	.navbar{
-		height: 80px;
-		background-color: @main-color;
+		height: 60px;
+		background-color: white;
 		border: 2px solid white;
 		.container-fluid{
-			margin-top: 15px;
+			margin-top: 5px;
 			.navbar-brand{
-				font-size: 40px;
-				color: white;
+				font-size: 30px;
+				color: black;
 			}
 
 			.collapse{
 				a{
-					font-size: 30px;
-					color: white;
+					font-size: 20px;
+					color: black;
 				}
 			}
 		}
