--- a/client/top/blog/blog.ejs
+++ b/client/top/blog/blog.ejs
@@ -3,7 +3,7 @@
 <head>
 	<title>Amazing</title>
 	<link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/less" href="/top/blog/blog.less">
+	<link rel="stylesheet" type="text/less" href="/top/blog/blog.less"><!-- less-css -->
 </head>
 <body>
 	<%include ../../public/header/header %>
