--- a/client/public/header/header.ejs
+++ b/client/public/header/header.ejs
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" type="text/less" href="/public/header/header.less"><!-- less-css -->
+<link rel="stylesheet" type="text/css" href="/public/header/header.css"><!-- less-css -->
 
 <header>
 	<nav class="navbar navbar-default container" >
