--- a/client/top/piclife/piclife.ejs
+++ b/client/top/piclife/piclife.ejs
@@ -3,7 +3,7 @@
 <head>
 	<title>Amazing</title>
 	<link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/less" href="/top/piclife/piclife.less"> <!-- less-css -->
+	<link rel="stylesheet" type="text/css" href="/top/piclife/piclife.css"> <!-- less-css -->
 </head>
 <body>
 	<%include ../../public/header/header %>
