--- a/client/top/top.ejs
+++ b/client/top/top.ejs
@@ -3,7 +3,7 @@
 <head>
 	<title>Amazing</title>
 	<link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/less" href="/top/top.less"><!-- less-css -->
+	<link rel="stylesheet" type="text/css" href="/top/top.css"><!-- less-css -->
 </head>
 <body>
 	<%include ../public/header/header %>
