--- a/client/top/blog/singleblog/singleblog.ejs
+++ b/client/top/blog/singleblog/singleblog.ejs
@@ -13,7 +13,7 @@
 				<div class="col-sm-12 flexbox direc-col main-start secon-start">
 				<% if(blog) {%>
 					<div><strong class="title"><%= blog[0].title %></strong><span class="author">write by <%= blog[0].author %></span> <span class=createtime>on <%= blog[0].createtime.toLocaleString() %></span></div>
-					<pre class="content"><%-"     "+blog[0].content  %></pre>
+					<div class="content"> <%-"     "+blog[0].content  %></div>
 				<% } else {%>
 					<p>也许是你点击的时候姿势不对，没有找到文章</p>
 					<p>建议返回上个页面，换个姿势，再来一次</p>
