--- a/client/top/blog/singleblog/singleblog.less
+++ b/client/top/blog/singleblog/singleblog.less
@@ -14,6 +14,8 @@ body{
 		margin-left: 30px;
 	}
 	.content{
+		margin-top: 30px;
+		margin-bottom: 70px;
 		font-size: 25px;
 		background-color: @main-color;
 		border: none;
