git cdn url change to cdn.rawgit.com

--- a/client/top/creative.less
+++ b/client/top/creative.less
@@ -221,7 +221,7 @@ header {
     min-height: auto;
     .background-cover;
     background-position: center;
-    background-image: url('https://raw.githubusercontent.com/xxiiaass/MYCDN/master/public/images/img/header.jpg');
+    background-image: url('https://cdn.rawgit.com/xxiiaass/MYCDN/master/public/images/img/header.jpg');
     text-align: center;
     color: white;
     .header-content {
