--- a/client/top/piclife/singlepic/singlepic.ejs
+++ b/client/top/piclife/singlepic/singlepic.ejs
@@ -11,10 +11,10 @@
 
     <title>Piclife</title>
 
-    <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css"><!--deve-->
-    <link href="/public/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"><!--deve-->
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">product-->
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">product-->
+<!--    <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css">deve-->
+<!--    <link href="/public/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">deve-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><!--product-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"><!--product-->
 
     <link rel="stylesheet" type="text/css" href="/top/piclife/singlepic/singlepic.css">
     
