--- a/client/top/blog/blog.ejs
+++ b/client/top/blog/blog.ejs
@@ -8,17 +8,19 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Blog</title>
-    <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css"><!--deve-->
-    <link href="/public/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"><!--deve-->
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">product-->
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">product-->
+
+<!--    <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css">deve-->
+<!--    <link href="/public/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">deve-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><!--product-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"><!--product-->
 
     <link href="/top/blog/clean-blog.css" rel="stylesheet">
 </head>
 
 <body>
    <%include ../../public/header/header %>
-    <header class="intro-header" style="background-image: url('https://raw.githubusercontent.com/xxiiaass/MYCDN/master/public/images/img/home-bg.jpg')">
+
+    <header class="intro-header" style="background-image: url('https://cdn.rawgit.com/xxiiaass/MYCDN/master/public/images/img/home-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
