--- a/client/top/index.ejs
+++ b/client/top/index.ejs
@@ -11,13 +11,13 @@
 
     <title>AMAZING</title>
 
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">product-->
-    <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css"><!--deve-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><!--product-->
+<!--    <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css">deve-->
 
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">product-->
-    <link href="/public/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"><!--deve-->
-<!--    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/xxiiaass/MYCDN/master/public/stylesheets/bootstrap/css/animate.min.css">product-->
-    <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/animate.min.css"><!--deve-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"><!--product-->
+<!--    <link href="/public/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">deve-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/xxiiaass/MYCDN/master/public/stylesheets/bootstrap/css/animate.min.css"><!--product-->
+<!--    <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/animate.min.css">deve-->
     <link href="/top/creative.css" rel="stylesheet">
     
 </head>
