--- a/client/top/piclife/singlepic/singlepic.less
+++ b/client/top/piclife/singlepic/singlepic.less
@@ -31,9 +31,10 @@ footer {
 		width:auto;
 		height:auto;
 		text-align:center;
+		margin-top: 100px;
 	}
 	.carousel-control{
 		background-image: none;
 	}
-
 }
+
