--- a/client/top/piclife/singlepic/singlepic.less
+++ b/client/top/piclife/singlepic/singlepic.less
@@ -10,11 +10,16 @@ body {
 
 .portfolio-item {
     margin-bottom: 25px;
+    min-height: 158px;
+	.portfolio-link{
+		display: block;
+	}
 }
 
 .row .img-responsive{
 	display: inline-block;
 	max-height: 200px;
+
 }
 footer {
     margin: 50px 0;
